normalize URL again